--- a/css/main.css
+++ b/css/main.css
@@ -530,11 +530,10 @@ iframe {
 @media (min-width: 576px) {
   .wrap-login100 {
     padding: 55px 15px 37px 15px;
-width:300px;!important
   }
   .message{
     margin:40px 0px 0px 0px;
-    width:300px;!important
+    width:300px;
   }
 }
 
